packet tracking bugs fix

--- a/gold-loan-backend/templates/scrap-customer-acknowledgement-templet.html
+++ b/gold-loan-backend/templates/scrap-customer-acknowledgement-templet.html
@@ -42,7 +42,7 @@
                     <span>Contact Number: xxxxxxx Email: xxxxx</span>
                 </p>
                 <br>
-                <h6 class="text-center"><u><b>PURITY TESTING / MELTING CONSENT FORM</b></u></h6>
+                <h6 class="text-center"><b>PURITY TESTING / MELTING CONSENT FORM</b></h6>
             </div>
         </div>
         <div class="row text-left">
@@ -50,13 +50,13 @@
                 <div class="row pt-3">
                     <div class="col-10 m-auto">
                         <span>Name : </span>
-                        <span><u>{{this.customerName}}</u></span>
+                        <span>{{this.customerName}}</span>
                     </div>
                 </div>
                 <div class="row pt-3">
                     <div class="col-10 m-auto">
                         <span>Address : </span>
-                        <span><u>{{this.customerAddress}}</u></span>
+                        <span>{{this.customerAddress}}</span>
                     </div>
                 </div>
                 <div class="row pt-3 ">
@@ -64,11 +64,11 @@
                         <div class="row">
                             <div class="col-4">
                                 <span>Phone No : </span>
-                                <span><u>{{this.customerMobileNo}}</u></span>
+                                <span>{{this.customerMobileNo}}</span>
                             </div>
                             <div class="col-6">
                                 <span>Email Id : </span>
-                                <span><u>{{this.customerEmail}}</u></span>
+                                <span>{{this.customerEmail}}</span>
                             </div>
                         </div>
                     </div>
@@ -77,13 +77,13 @@
                     <div class="col-10 m-auto">
                         <span>Passport number/PAN card/Driving license/Aadhar card :
                         </span>
-                        <span><u>{{this.addressProofNo}}</u></span>
+                        <span>{{this.addressProofNo}}</span>
                     </div>
                 </div>
                 <div class="row pt-3">
                     <div class="col-10 m-auto">
                         <span>Issuing authority : </span>
-                        <span><u>{{this.issuingAuthority}}</u></span>
+                        <span>{{this.issuingAuthority}}</span>
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
         <div class="row pt-3">
             <div class="col-10 m-auto">
                 <p>I Mr./Mrs.
-                    <span><u>{{this.customerName}}</u></span>
+                    <span>{{this.customerName}}</span>
                     hereby request/consent Augmont private limited to do purity test/Melting of the ornaments described
                     below:</p>
             </div>
@@ -103,7 +103,7 @@
                 <table class="align-top text-center table-bordered"
                     style="width: 100%;margin:0;font-weight: 500;table-layout: fixed;border: 1px solid #b4b4b4;">
                     <tr >
-                        <th style="width: 10%">sr.No</th>
+                        <th style="width: 10%">Sr.No</th>
                         <th style="width: 50%; word-wrap: break-word">Description</th>
                         <th style="width: 20%">Quantity (no's)</th>
                         <th style="width: 20%">Gross weight (in grams)</th>
@@ -188,22 +188,22 @@
         <div class="row pt-2">
             <div class="col-10 m-auto">
               <div class="row">
-                <div class="col-4 ">place: __________</div>
+                <div class="col-4 ">place: </div>
               </div>
             </div>
           </div>
         <div class="row pt-2">
           <div class="col-10 m-auto">
             <div class="row">
-              <div class="col-4 ">Date: <u>{{this.date}}</u></div>
+              <div class="col-4 ">Date: {{this.date}}</div>
               <div class="col-4"></div>
-              <div class="col-4 text-right">Signature__________</div>
+              <div class="col-4 text-right">Signature</div>
             </div>
           </div>
            
         </div>
         <div class="row pt-4">
-            <div class="col-10 m-auto">CIN<span>__________</span></div>
+            <div class="col-10 m-auto">CIN<span></span></div>
         </div>
         {{/each}}
 
