--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/update-status/update-status.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/update-status/update-status.component.html
@@ -61,7 +61,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="offset-1 col-4 form-label">
-                                        <mat-label>Principal OutStanding Amount <span class="currency">(₹)</span>
+                                        <mat-label>Principal OutStanding <span class="currency">(₹)</span>
                                         </mat-label>
                                     </div>
                                     <div class="col-7">
