--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.scss
@@ -8,6 +8,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        flex: 0 0 5%;
     }
 
     .mat-column-netWeightRemainingOrnament{
@@ -56,4 +57,8 @@
         padding-right: 25px;
         justify-content: flex-end;
     }
+    .mat-column-currentLocation{
+        flex: 0 0 5%;
+    }
+    
 }
