--- a/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
@@ -123,7 +123,7 @@
                                             <span *ngIf="ornament.controls.deductionWeight.errors?.required">Field
                                                 Required</span>
                                             <span *ngIf="ornament.controls.deductionWeight.errors?.weight">
-                                                <small>Deduction Weight should be lesser then Gross Weight</small>
+                                                <small>Deduction Weight should be less than Gross Weight</small>
                                             </span>
                                         </mat-error>
                                     </div>
