--- a/gold-admin-frontend/src/app/views/partials/components/scrap-update-location/scrap-update-location.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/scrap-update-location/scrap-update-location.component.html
@@ -191,7 +191,7 @@
                         <div class="row justify-content-center kt-margin-t-15">
                             <div class="col offset-4">
                                 <input type="text" class="form-control" numbersOnly placeholder="Enter OTP"
-                                    formControlName="otp"
+                                    formControlName="otp" maxlength="4"
                                     [class.isError]="locationForm.controls.otp.invalid &&  locationForm.controls.otp.touched"
                                     [readonly]="otpVerfied" [class.cursor-not-allowed]="otpVerfied">
                             </div>
