--- a/gold-loan-backend/templates/scrap-customer-acknowledgement-templet.html
+++ b/gold-loan-backend/templates/scrap-customer-acknowledgement-templet.html
@@ -33,13 +33,13 @@
         <div class="row">
             <div class="col-10 text-center m-auto">
                 <div class="text-left">
-                    <div><span>GST: </span><span>{{this.gstNo}}</span></div>
-                    <div class="pt-3"><span>HSN Code: </span><span></span></div>
+                    <div><span><b>GST: </b></span><span>{{this.gstNo}}</span></div>
+                    <div class="pt-3"><span><b>HSN Code: </b></span><span></span></div>
                 </div>
-                <p class="pt-3"><b class="text-center">AUGMONT PRIVATE LIMITED</b><br>
-                    <span>3rd Floor, 115/121, BULLION HOUSE, TAMBAKATA LANE,PYDHONIE, Mumbai City, Maharashtra,
-                        400003</span><br>
-                    <span>Contact Number: xxxxxxx Email: xxxxx</span>
+                <p class="pt-3"><h5><b class="text-center">AUGMONT PRIVATE LIMITED</b></h5><br>
+                    <span style="font-weight: 500;">3rd Floor, 115/121, BULLION HOUSE, TAMBAKATA LANE,PYDHONIE, Mumbai City, Maharashtra,
+                        400003</span><br><br>
+                    <span style="font-weight: 500;">Contact Number: 9898776677 &nbsp&nbsp&nbsp&nbsp Email: support@augmont.com</span>
                 </p>
                 <br>
                 <h6 class="text-center"><b>PURITY TESTING / MELTING CONSENT FORM</b></h6>
@@ -49,13 +49,13 @@
             <div class="col-12 container">
                 <div class="row pt-3">
                     <div class="col-10 m-auto">
-                        <span>Name : </span>
+                        <span><b>Name : </b></span>
                         <span>{{this.customerName}}</span>
                     </div>
                 </div>
                 <div class="row pt-3">
                     <div class="col-10 m-auto">
-                        <span>Address : </span>
+                        <span><b>Address : </b></span>
                         <span>{{this.customerAddress}}</span>
                     </div>
                 </div>
@@ -63,11 +63,11 @@
                     <div class="col-10 m-auto">
                         <div class="row">
                             <div class="col-4">
-                                <span>Phone No : </span>
+                                <span><b>Phone No : </b></span>
                                 <span>{{this.customerMobileNo}}</span>
                             </div>
                             <div class="col-6">
-                                <span>Email Id : </span>
+                                <span><b>Email ID : </b></span>
                                 <span>{{this.customerEmail}}</span>
                             </div>
                         </div>
@@ -75,14 +75,14 @@
                 </div>
                 <div class="row pt-3">
                     <div class="col-10 m-auto">
-                        <span>Passport number/PAN card/Driving license/Aadhar card :
-                        </span>
+                        <span><b>Passport number/PAN card/Driving license/Aadhar card :
+                        </b></span>
                         <span>{{this.addressProofNo}}</span>
                     </div>
                 </div>
                 <div class="row pt-3">
                     <div class="col-10 m-auto">
-                        <span>Issuing authority : </span>
+                        <span><b>Issuing authority : </b></span>
                         <span>{{this.issuingAuthority}}</span>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
         <div class="row pt-3">
             <div class="col-10 m-auto">
                 <p>I Mr./Mrs.
-                    <span>{{this.customerName}}</span>
+                    <span><b>{{this.customerName}}</b></span>
                     hereby request/consent Augmont private limited to do purity test/Melting of the ornaments described
                     below:</p>
             </div>
@@ -188,28 +188,28 @@
         <div class="row pt-2">
             <div class="col-10 m-auto">
               <div class="row">
-                <div class="col-4 ">place: </div>
+                <div class="col-4 "><b>Place: </b></div>
               </div>
             </div>
           </div>
         <div class="row pt-2">
           <div class="col-10 m-auto">
             <div class="row">
-              <div class="col-4 ">Date: {{this.date}}</div>
+              <div class="col-4 "><b>Date: </b>{{this.date}}</div>
               <div class="col-4"></div>
-              <div class="col-4 text-right">Signature</div>
+              <div class="col-4 text-right"><b>Signature</b></div>
             </div>
           </div>
            
         </div>
         <div class="row pt-4">
-            <div class="col-10 m-auto">CIN<span></span></div>
+            <div class="col-10 m-auto"><b>CIN:</b><span>{{this.cinNo}}</span></div>
         </div>
         {{/each}}
 
-        <div class="row">
+        <div class="row pt-4">
           <div class="col-10 m-auto">
-            <p>Registered Address:  AUGMONT PRIVATE LIMITED 3rd Floor, 115/121, BULLION HOUSE, TAMBAKATA LANE,PYDHONIE, Mumbai City, Maharashtra, 400003 Contact Number xxxxxxx Email xxxxx
+            <p>Registered Address:  <b>AUGMONT PRIVATE LIMITED</b> 3rd Floor, 115/121, BULLION HOUSE, TAMBAKATA LANE,PYDHONIE, Mumbai City, Maharashtra, 400003 Contact Number 9898776677 Email  support@augmont.com
             </p>
           </div>
         </div>
