--- a/gold-loan-backend/templates/scrap-purchase-voucher.html
+++ b/gold-loan-backend/templates/scrap-purchase-voucher.html
@@ -36,20 +36,21 @@
     <div class="container py-5 pr-5 pl-5">
         <div class="container">
             <div class="row py-0 pr-3">
-                <div class="col-10 text-center m-auto" style="border: 1px solid black;">
+                <!-- style="border: 1px solid black;" -->
+                <div class="col-10 text-center m-auto" >
 
                     <p class="pt-2">
-                        <h5 >Augmont Goldtech Private Limited</h5>
-                    <div style="font-weight: 500;">
+                        <h5 ><b>Augmont Goldtech Private Limited</b></h5>
+                    <div >
                         <div >(Formerly Augmont Precious Metals Private Limited)</div>
                         <div>(CIN :- U51909MH2020PTC337639) (GSTIN:- 27AATCA3030A1Z3)</div>
                         <div>3rd Floor,Bullion House,115,Tambakata Lane, Zaveri Bazaar, MUMBAI- 400003</div>
-                    </div>
+                    </div><br>
                    
                     <div class="row">
                         <div class="col-6 text-left">
                             <div class="row">
-                                <div style="font-weight: 500;" class="col-6 text-right">LANDLINE NO: </div>
+                                <div class="col-6 text-right"><b>LANDLINE NO: </b></div>
                                 <div class="col-6 text-left">
                                     <div>022-61420000</div>
                                     <div>022-61420000</div>
@@ -58,11 +59,11 @@
                         </div>
                         <div class="col-6 text-right">
                             <div class="row">
-                                <div style="font-weight: 500;" class="col-6 text-right">Website :</div>
+                                <div class="col-6 text-right"><b>Website :</b></div>
                                 <div class="col-6"></div>
                             </div>
                             <div class="row">
-                                <div style="font-weight: 500;" class="col-6 text-right">Email :</div>
+                                <div class="col-6 text-right"><b>Email :</b></div>
                                 <div class="col-6 text-left">help@augmont.in</div>
                             </div>
                         </div>
@@ -70,26 +71,26 @@
 
                     </p>
                     <br>
-                    <h5 class="text-center"><u>PURCHASE VOUCHER</u></h5>
+                    <h5 class="text-center">PURCHASE VOUCHER</h5>
                 </div>
             </div>
             <div class="row py-0 pr-3">
                 {{#each purchaseVoucher}}
-                <div class="col-10 m-auto pt-2 pb-5" style="border: 1px solid black;">
+                <div class="col-10 m-auto pt-2 pb-5" >
                     <div class="row">
                         <div class="col-6 text-left">
-                            <div style="font-weight: 500;">{{this.customerName}}</div>
-                            <div style="font-weight: 500;">Address: </div>
+                            <div ><b>{{this.customerName}}</b></div>
+                            <div ><b>Address: </b></div>
                             <div style="word-wrap: break-word">
                                 {{this.customerAddress}}
                             </div>
                             <div>{{this.pinCode}}</div>
                             <div>{{this.customerSatte}}</div>
-                            <div style="font-weight: 500;">PAN No: <span>{{this.panNo}}</span></div>
+                            <div ><b>PAN No: </b><span> {{this.panNo}}</span></div>
                         </div>
                         <div class="col-6">
-                            <div style="font-weight: 500;">Voucher Number: <span>{{this.voucherNumber}}</span></div>
-                            <div style="font-weight: 500;">Voucher Date: <span>{{this.date}}</span></div>
+                            <div ><b>Voucher Number: </b><span> {{this.voucherNumber}}</span></div>
+                            <div ><b>Voucher Date: </b><span> {{this.date}}</span></div>
                         </div>
                     </div>
                 </div>
@@ -103,7 +104,7 @@
                             <th style="width: 10%">Sr.No</th>
                             <th style="width: 40%; word-wrap: break-word">Description</th>
                             <th style="width: 10%">Units</th>
-                            <th style="width: 10%">Grams</th>
+                            <th style="width: 10%">Net weight &nbsp&nbsp&nbsp(in grams)</th>
                             <th style="width: 10%">Rate Per Unit</th>
                             <th style="width: 10%">Amount</th>
                         </tr>
@@ -174,20 +175,20 @@
                     </table>
                 </div>
             </div>
-            <div class="row py-0 my-0 pr-3">
-                <div class="col-10 mx-auto my-0 px-0 py-0" style="border: 1px solid black;">
-                    <div class="text-left" style="font-weight: 500;">Delivery :- Ex-office/Showroom/As per Customers request</div>
+            <div class="row pt-4 pr-3">
+                <div class="col-10 mx-auto my-0 px-0 py-0" >
+                    <div class="text-left" ><b>Delivery :- Ex-office/Showroom/As per Customers request</b></div>
                     <div class="pl-5">
-                        <div style="font-weight: 500;">Terms & Conditions:-</div>
+                        <div class="pl-4"><b>Terms & Conditions:</b></div>
                         <ol type="1">
                             <li>Goods once sold will not be returned.</li>
                             <li>Any disputes shall be subject to mumbai jurisdiction.</li>
                             <li>Our responsibility ceases once the goods are delivered to the customer.</li>
                         </ol>
                     </div>
-                    <div class="col-4 offset-8 text-center" style="font-weight: 500;">
-                        For Augmont Goldtech Private Limited
-                        <div class="pt-5 ">
+                    <div class="col-4 offset-8 text-center" ><b>
+                        For Augmont Goldtech Private Limited</b>
+                        <div class="pt-5 " style="font-weight: 500;">
                             Authorised Signatory
                         </div>
                     </div>
