--- a/gold-loan-backend/templates/pawnTicket-secure-template.html
+++ b/gold-loan-backend/templates/pawnTicket-secure-template.html
@@ -122,8 +122,8 @@
                 style="font-size: small;font-weight: 400;padding-left: 15%;">
                 <table class="align-top " style="width:100%;margin:0;font-weight: 500;table-layout: fixed;">
                     <tr>
-                        <th>Email ID</th>
-                        <th>Contact Us</th>
+                        <th>Customer Service</th>
+                        <th>Call Us</th>
                         <th>Email Us</th>
                     </tr>
                     <tr>
