--- a/gold-loan-backend/templates/pawnTicket-secure-unsecure-template.html
+++ b/gold-loan-backend/templates/pawnTicket-secure-unsecure-template.html
@@ -125,8 +125,8 @@
                 style="font-size: small;font-weight: 400;padding-left: 15%;">
                 <table class="align-top " style="width:100%;margin:0;font-weight: 500;table-layout: fixed;">
                     <tr>
-                        <th>Email ID</th>
-                        <th>Contact Us</th>
+                        <th>Customer Service</th>
+                        <th>Call Us</th>
                         <th>Email Us</th>
                     </tr>
                     <tr>
@@ -476,7 +476,7 @@
                 
                 <table class="align-top " style="width:100%;margin:0;font-weight: 500;table-layout: fixed;">
                     <tr>
-                        <th>Address</th>
+                        <th>Customer Address</th>
                         <th>Loan Number</th>
                         <th>Scheme Name</th>
                         <th>Loan Amount (₹)</th>
@@ -503,7 +503,7 @@
                         <!-- <th></th> -->
                     </tr>
                     <tr>
-                        <td>{{this.loanTenure}}</td>
+                        <td>{{this.loanTenure}}Months</td>
                         <td>{{this.penalCharges}}%</td>
                         <td>{{this.interestRate}}%</td>
                         <td>{{this.processingFee}}</td>
@@ -528,9 +528,11 @@
 
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <tr>
+                            <td class="align-top text-center">09765422510</td>
+                            <td class="align-top text-center">AUGMONT GOLDTECH PRIVATE LIMITED</td>
+                            <td class="align-top text-center">IFSC0000111</td>
+                        </tr>
                     </tr>
                 </table>
             </div>
