--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packets-list/packets-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packets-list/packets-list.component.html
@@ -21,7 +21,7 @@
 
                 <ng-container matColumnDef="packetUniqueId">
                     <mat-header-cell *matHeaderCellDef>Packet ID</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.packetUniqueId | uppercase}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.packetUniqueId}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="barcode">
