--- a/gold-admin-frontend/src/app/views/pages/admin/masters/lead-source/lead-source-list/lead-source-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/masters/lead-source/lead-source-list/lead-source-list.component.html
@@ -5,12 +5,12 @@
 
                 <ng-container matColumnDef="lead">
                     <mat-header-cell *matHeaderCellDef>Lead</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.leadName | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.leadName}}</mat-cell>
                 </ng-container>
 
                 <!-- <ng-container matColumnDef="source">
                     <mat-header-cell *matHeaderCellDef>Source</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.sourceName | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.sourceName}}</mat-cell>
                 </ng-container> -->
 
                 <ng-container matColumnDef="action">
