--- a/gold-admin-frontend/src/app/views/pages/admin/masters/reasons/reason-list/reason-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/masters/reasons/reason-list/reason-list.component.html
@@ -5,7 +5,7 @@
 
                 <ng-container matColumnDef="reason">
                     <mat-header-cell *matHeaderCellDef>Reason</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.description | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.description }}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="action">
