--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.scss
@@ -35,4 +35,11 @@
 	.padding-8 {
 		padding-right: 8%
 	}
+	.th-padding-left {
+		padding-left: 3%;
+    	width: 10%;
+	}
+	.th-padding-right {
+		padding-right: 2% !important;
+	}
 }
