--- a/gold-admin-frontend/src/app/views/pages/admin/settings/cron-list/cron-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/settings/cron-list/cron-list.component.html
@@ -1,4 +1,4 @@
-<kt-filtered-data [filteredList]="filteredDataList"></kt-filtered-data>
+<kt-filtered-data [filteredList]="filteredDataList" [filterName]="'cron'"></kt-filtered-data>
 
 <kt-portlet>
     <kt-portlet-body>
