--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -477,9 +477,9 @@
               <!-- emi,loan -->
               <!-- failed,success -->
               <div class="col">
-                <label>Date</label>
+                <label>From Date</label>
                 <input class="form-control" [matDatepicker]="picker" (click)="picker.open()" formControlName="startDate"
-                  readonly placeholder="4/5/2020" />
+                  readonly placeholder="4/5/2020" [max]="currentDate" (dateChange)="validations()"/>
                 <mat-datepicker #picker></mat-datepicker>
               </div>
 
@@ -487,9 +487,9 @@
             </div>
             <div class="row kt-padding-t-5">
               <div class="col-6">
-                <label>Date</label>
-                <input class="form-control" [matDatepicker]="picker1" (click)="picker1.open()" formControlName="date"
-                  readonly placeholder="4/5/2020" />
+                <label>To Date</label>
+                <input class="form-control" [matDatepicker]="picker1" (click)="picker1.open()" formControlName="endDate"
+                  readonly placeholder="4/5/2020" [max]="currentDate" (dateChange)="validations()"/>
                 <mat-datepicker #picker1></mat-datepicker>
               </div>
               <div class="col-2 d-flex align-items-end">
