--- a/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
@@ -62,6 +62,7 @@
                     <div class="filtered-data" *ngIf="filteredList?.startDate">
                         <div class="filtered-title" *ngIf="filterName == 'deposit'">By Payment Recieved Date</div>
                         <div class="filtered-title" *ngIf="filterName == 'cancelOrder'">By Cancel Date</div>
+                        <div class="filtered-title" *ngIf="filterName == 'cron'">By From Date</div>
                         <div class="d-flex">
                             <div class="filtered-value">
                                 <span>{{filteredList?.startDate}}</span>
@@ -246,11 +247,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="filtered-data" *ngIf="filteredList?.date">
-                        <div class="filtered-title">By Date</div>
+                    <div class="filtered-data" *ngIf="filteredList?.endDate">
+                        <div class="filtered-title">By End Date</div>
                         <div class="d-flex">
                             <div class="filtered-value" >
-                                <span>{{filteredList?.date | date:'mediumDate'}}</span>
+                                <span>{{filteredList?.endDate | date:'mediumDate'}}</span>
                                 <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
                                     (click)="clearFilter('date')">
                             </div>
