--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/full-release-approval/full-release-approval.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/full-release-approval/full-release-approval.component.scss
@@ -7,6 +7,7 @@
     .mat-column-principalOutstandingAmountLTV{
         display: flex;
         flex-direction: column;
+        align-items: flex-end;
         flex: 0 0 8%;
     }
 
@@ -29,10 +30,16 @@
         justify-content: center;
     }
     .mat-column-loanAmount{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
         padding-right: 25px;
         justify-content: flex-end;
     }
     .mat-column-principalAmount{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
         padding-right: 25px;
         justify-content: flex-end;
         flex: 0 0 6%;
