--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.scss
@@ -32,7 +32,16 @@
         flex: 0 0 5%;
     }
     .mat-column-loanAmount{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
         flex: 0 0 4%;
+    }
+    .mat-column-principalAmount{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        flex: 0 0 5%;
     }
     .mat-column-uploadDocument{
         flex: 0 0 5%;
